<resources>
    <string name="app_name">Bond</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Activation">Activation</string>
    <string name="done">Done</string>
    <string name="version">Version 1.0.10.2</string>
    <string name="one_time_password">One-Time Password</string>
    <string name="enter_your_activation_code">Enter your activation code</string>
    <string name="next">Next</string>
    <string name="enter_your_master_password">Enter your master password</string>
    <string name="password_shall_have_a_minimum_of_contain_characters_or_numbers">Set a password with only numbers and one special char: +-/*% (minimum 8 chars)</string>
    <string name="password_shall_have_a_minimum_of_4_characters_or_numbers">Password shall have a minimum of 4 characters or numbers</string>
    <string name="verify_master_password">Verify Master Password</string>
    <string name="set_master_password">Set Master Password</string>
    <string name="re_enter_the_master_password">Re-enter the master password</string>
    <string name="your_password_matches">Your password matches</string>
    <string name="your_password_doesnt_matches">Your password doesn’t matches</string>
    <string name="token"><![CDATA[<]]></string>
    <string name="you_have_ho_chat_lists_yet">You have no chat lists yet</string>
    <string name="you_have_ho_contacts_yet">You have no contacts yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>
    <string name="capture">Capture</string>
    <string name="add_text">Add a caption…</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="title_activity_settings_test">SettingsTestActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="tone_title">Notification tone</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="popup_notification_title">Vibrate</string>
    <string name="chat_setting_header">Chats</string>
    <string name="wallpaper_header">Set Chat Wallpaper</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="wallpaper_summary">Set chat background color</string>
    <string name="wallpaper_preview_label">Wallpaper Preview</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="account_header">Account</string>
    <string name="chat_header">Chats</string>
    <string name="notifications_header">Notifications</string>
    <string name="data_usage_header">Data usage</string>
    <string name="help_header">Help</string>
    <string name="media_photo">Photo</string>
    <string name="media_video">Video</string>
    <string name="media_photos">Photos</string>
    <string name="media_videos">Videos</string>
    <string name="media_audio">Audio</string>
    <string name="media_documents">Documents</string>
    <string name="media_document">Document</string>
    <string name="media_nothing">No media</string>
    <string name="media_all">All media</string>
    <string name="tone_1">Tone 1</string>
    <string name="tone_2">Tone 2</string>
    <string name="tone_3">Tone 3</string>
    <string name="tone_4">Tone 4</string>
    <string name="tone_5">Tone 5</string>
    <string name="tone_6">Tone 6</string>
    <string name="tone_7">Tone 7</string>
    <string name="tone_8">Tone 8</string>
    <string name="tone_9">Tone 9</string>
    <string name="tone_10">Tone 10</string>
    <string name="vibrate_entries_long">Long</string>
    <string name="vibrate_entries_short">Short</string>
    <string name="vibrate_entries_default">Default</string>
    <string name="vibrate_entries_off">Off</string>
    <string name="popup_notification_entries_always_show_popup">Always show popup</string>
    <string name="popup_notification_entries_only_when_screen_off">Only when screen \"off\"</string>
    <string name="popup_notification_entries_only_when_screen_on">Only when screen \"on\"</string>
    <string name="popup_notification_entries_no_popup">No popup</string>
    <string name="voice_call">Voice call</string>
    <string name="remove_from_call_log">Remove from call log</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_remove_from_call_log">Remove from call log</string>
    <string name="call_outgoing">Outgoing</string>
    <string name="call_incoming">Incoming</string>
    <string name="call_not_answered">Not answered</string>
    <string name="call_missed">Missed</string>
    <string name="video_call">Video call</string>
    <string name="call_info">Call info</string>
    <string name="no_internet_Connection">No Internet Connection</string>
    <string name="general_error_msg">An error occured please try again</string>
    <string name="contacts_tab">CONTACTS</string>
    <string name="chats_tab">CHATS</string>
    <string name="calls_tab">CALLS</string>
    <string name="storage_usage_header">Storage usage</string>
    <string name="storage_usage_summary">View your storage usage</string>
    <string name="data_usage_summary">Network usage, auto-download</string>
    <string name="cahts_settings_summary">Theme, wallpapers,chat history</string>
    <string name="account_settings_summary">Privacy, security, change number</string>
    <string name="configuration_updated_successfully">Configuration updated successfully</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="questions_need_help">Questions? Need help?</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App info</string>
    <string name="about">About</string>
    <string name="phone">Phone</string>
    <string name="islamic_calendar">Islamic</string>
    <string name="gregorian_calendar">Gregorian</string>
    <string name="tap_to_update_your_Calendar_type">Tap to update your Calendar type</string>
    <string name="name">Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="profile">Profile</string>
    <string name="help_settings_header">You can reach out support staff by choosing one of the following methods</string>
    <string name="in_app_call">In-app Call</string>
    <string name="in_app_live_chat_with_one_of_our_support_specialist">In-App live chat with one of our support specialist.</string>
    <string name="live_chat_settings_help">Live Chat</string>
    <string name="speak_to_one_of_our_support_specialist_on_in_app_call">speak to one of our support specialist on in-app call.</string>
    <string name="you">You</string>
    <string name="info">Info</string>
    <string name="action_forwardMsg">Forward</string>
    <string name="action_deleteMsg">Delete</string>
    <string name="action_starMsg">Star</string>
    <string name="action_replyMsg">Reply</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="you_deleted_this_message">You deleted this message</string>
    <string name="forward_to">Forward to…</string>
    <string name="read">Read</string>
    <string name="delivered">Delivered</string>
    <string name="exceed_max_selecting_size">You must not select more than 15</string>
    <string name="lbl_connecting_call">Connecting Call</string>
    <string name="creating_group">Creating Group</string>
    <string name="send">Send</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_date">Sort by date</string>
    <string name="incoming_voice_call">Incoming voice call</string>
    <string name="incoming_video_call">Incoming video call</string>
    <string name="decline_text">DECLINE</string>
    <string name="answer_text">ANSWER</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="type_a_message">Type a Message</string>
    <string name="voice_message">Voice message</string>
    <string name="audio_permission">To call, allow Bond access to your microphone.</string>
    <string name="video_permission">To video call, allow Bond access to your microphone and your camera.</string>
    <string name="calling">Calling</string>
    <string name="ringing">Ringing</string>
    <string name="outgoing">Outgoing</string>
    <string name="new_conference_call">New Conference Call</string>
    <string name="select_all">Select all</string>
    <string name="mute">Mute</string>
    <string name="archive">Archive</string>
    <string name="_1_hour">1 hour</string>
    <string name="_2_hours">2 hours</string>
    <string name="_1_day">1 day</string>
    <string name="_2_days">2 days</string>
    <string name="_1_week">1 week</string>
    <string name="never">Never</string>
    <string name="action_voiceCall">Voice Call</string>
    <string name="action_videoCall">Video Call</string>
    <string name="clear_caht">Clear chat</string>
    <string name="auto_delete">Auto delete</string>
    <string name="chat_search">Chat Search</string>
    <string name="custom_tone">Custom Tone</string>
    <string name="phone_number">Phone Number</string>
    <string name="about_and_phone_number">About and Phone Number</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="ok_message">OK</string>
    <string name="title_activity_archive">ArchiveActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="exit_group">Exit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete">Delete</string>
    <string name="temporary_group_text">Temporary Group</string>
    <string name="make_group_admin">Make group Admin</string>
    <string name="dismiss_admin">Dismiss Admin</string>
    <string name="enter_new_subject">Enter new subject</string>
    <string name="subject">Subject…</string>
    <string name="subject_not_empty">Subject can\'t be empty.</string>
    <string name="exit">EXIT</string>
    <string name="will_be_deleted_on">Will be deleted on:</string>
    <string name="not_found">Not found</string>
    <string name="cannot_click_image_pix">Can not add more than %s images</string>
    <string name="pix_bottom_message_with_video">Hold for video, tap for photo</string>
    <string name="pix_bottom_message_without_video">Drag images up for gallery</string>
    <string name="pix_last_month">Last Month</string>
    <string name="pix_last_week">Last Week</string>
    <string name="pix_ok">OK</string>
    <string name="pix_recent">Recent</string>
    <string name="pix_selected">Selected</string>
    <string name="pix_tap_to_select">Tap photo to select</string>
    <string name="selection_limiter_pix">Can\'t select more than %d items.</string>
    <string name="message_copied">Message copied</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="your_master_password">Your master password</string>
    <string name="login">Login</string>
</resources>