<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.recyclerviewsearch.MainActivity">
<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:icon="@drawable/ic_search_black_24dp"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_search"-->

<!--        app:actionViewClass="androidx.appcompat.widget.SearchView" />-->
    <item
        android:title="Search Option"
        android:id="@+id/menu_search_option"
        android:icon="@drawable/remove_icon"
        app:showAsAction="always">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_by_name"
            android:title="@string/action_sort_by_name"
            android:checked="true"/>
        <item
            android:id="@+id/action_sort_by_date"
            android:title="@string/action_sort_by_date" />
    </group>
    </item>
    <item
        android:id="@+id/action_search"

        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
</menu>