<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="messages"
        app:title="Messages">
        <ListPreference
            app:defaultValue="tone_1"
            app:entries="@array/tones_entries"
            app:entryValues="@array/tones_values"
            app:iconSpaceReserved="false"
            app:key="tones_messages"
            app:title="@string/tone_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/vibrate_entries"
            app:iconSpaceReserved="false"
            app:entryValues="@array/vibrate_values"
            app:key="vibrate_messages"
            app:title="@string/vibrate_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="no_popup"
            app:entries="@array/popup_notification_entries"
            app:iconSpaceReserved="false"
            app:entryValues="@array/popup_notification_values"
            app:key="popup_notification_messages"
            app:title="@string/popup_notification_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="Groups"
        app:key="groups"
        app:iconSpaceReserved="false">
        <ListPreference
            app:defaultValue="tone_1"
            app:entries="@array/tones_entries"
            app:iconSpaceReserved="false"
            app:entryValues="@array/tones_values"
            app:key="tones_groups"
            app:title="@string/tone_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/vibrate_entries"
            app:iconSpaceReserved="false"
            app:entryValues="@array/vibrate_values"
            app:key="vibrate_groups"
            app:title="@string/vibrate_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="no_popup"
            app:entries="@array/popup_notification_entries"
            app:iconSpaceReserved="false"
            app:entryValues="@array/popup_notification_values"
            app:key="popup_notification_groups"
            app:title="@string/popup_notification_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
<!--    <EditTextPreference-->
<!--        app:key="signature"-->
<!--        app:title="@string/signature_title"-->
<!--        app:useSimpleSummaryProvider="true" />-->


</PreferenceScreen>