<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    tools:context=".SignupActivity">


    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="240dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2048_without_background" />

    <TextView
        android:id="@+id/tv_label_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_master_password"
        android:textColor="@color/white"

        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toTopOf="@+id/edtOneTimePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />



    <EditText
        android:id="@+id/edtOneTimePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_edit_shape"
        android:cursorVisible="true"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/your_master_password"
        android:inputType="numberPassword|numberSigned|phone"
        android:gravity="center"

        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/size_14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />
    <TextView
        android:id="@+id/tv_label_hint"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:fontFamily="@font/helvetica_45_light"
        android:gravity="center"
        android:text="@string/password_shall_have_a_minimum_of_4_characters_or_numbers"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtOneTimePassword"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_shape"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_15sdp"
        android:text="@string/login"
        android:textColor="@drawable/sing_up_selector"
        android:textSize="@dimen/size_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_hint"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/version"
        android:textColor="@color/sign_up_version_text_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_done"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/bottom_rectangle"
        android:layout_width="150dp"
        android:layout_height="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/sign_up_bottom_rectangle_color"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageOk"
        android:layout_width="11dp"
        android:layout_height="13dp"
        android:fontFamily="@font/helvetica_45_light"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/edtOneTimePassword"
        app:layout_constraintEnd_toEndOf="@+id/edtOneTimePassword"
        app:layout_constraintTop_toTopOf="@+id/edtOneTimePassword"
        app:srcCompat="@drawable/cross" />


    <TextView
        android:id="@+id/goBackLeft"
        android:layout_width="23dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/token"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="@dimen/size_30sp"
        android:fontFamily="@font/helvetica_45_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/helvetica_45_light"
        android:text="Go back"
        android:visibility="invisible"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>